--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/svg+xml" href="src/img/vite.svg" />
 
-  <title>Vite App</title>
+  <title>ScreenLayer</title>
 </head>
 
 <body>
